<resources>
    <string name="app_name">MyProfileMarkup</string>

    <!--Activity Main-->
    <string name="settings">Settings</string>
    <string name="nameSurname">Name Surname</string>
    <string name="career">Career</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_contacts">View my contacts</string>
    <string name="icon_facebook_description">Icon of Facebook</string>
    <string name="icon_instagram_description">Icon of Instagram</string>
    <string name="icon_linkedin_description">Icon of LinkedIn</string>

    <!--Activity Registration-->
    <string name="registration_header">Let\'s get acquainted</string>
    <string name="fill_out_profile">Fill out the profile and go to the application!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="google">Google</string>
    <string name="register">Register</string>
    <string name="about_terms_and_conditions">By clicking Register you agree to our Terms and Conditions</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="required_field">Required Field!</string>
    <string name="invalid_email">Incorrect E-Mail address</string>
    <string name="required_digit_password">Required at least 1 digit</string>
    <string name="password_rules">Password must contain upper and lower case letters</string>
    <string name="password_size">Your password must include a minimum of 8 characters.</string>
    <string name="incorrect_password_email">Incorrect e-mail or password!</string>
    <string name="icon_google_description">Icon of Google</string>

    <!--Activity Contacts-->
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="contact_photo_description">Photo of contact</string>
    <string name="trash_bin_icon_description">Icon of trash bin</string>
    <string name="back_button_description">Icon of back button</string>
    <string name="search_button_description">Icon of search button</string>
    <string name="removing_contact_success">Contact has been removed</string>
    <string name="removing_contact_cancel">Cancel</string>
    <string name="canceled_removing_contact">Contact removing is canceled!</string>

    <!-- Add Contact Dialog Fragment -->
    <string name="add_contact">Add contact</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
</resources>