<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_header"
        android:textColor="@color/profileWhite"
        android:textSize="@dimen/registration_max_text"
        android:fontFamily="@font/open_sans"
        android:paddingTop="@dimen/padding_big"
        android:layout_marginTop="@dimen/padding_max"
        android:gravity="center"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_out_profile"
        android:textColor="@color/grey_text"
        android:textSize="@dimen/registration_little_text"
        android:fontFamily="@font/open_sans"
        android:layout_margin="@dimen/padding_small"
        android:gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:hintTextAppearance="@style/TextInputHint"
        android:textColorHint="@color/grey_text"
        android:layout_marginHorizontal="@dimen/padding_small"
        app:errorEnabled="true"
        android:layout_marginBottom="@dimen/padding_little">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_big"
            android:textSize="@dimen/registration_average_text"
            android:textColor="@color/profileWhite" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:saveEnabled="true"
        app:hintTextAppearance="@style/TextInputHint"
        android:textColorHint="@color/grey_text"
        android:layout_marginHorizontal="@dimen/padding_small"
        app:errorEnabled="true"
        android:layout_marginBottom="@dimen/padding_little">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_big"
            android:textSize="@dimen/registration_average_text"
            android:textColor="@color/profileWhite"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/padding_big"
        android:text="@string/remember_me"
        android:checked="true"
        android:fontFamily="@font/open_sans"
        android:textSize="@dimen/registration_small_text"
        android:button="@drawable/checkbox_selector"
        android:buttonTint="@color/white"
        android:textColor="@color/grey_text"
        android:paddingHorizontal="@dimen/padding_little"
        android:layout_marginStart="@dimen/padding_small"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_average_double"
        android:background="@drawable/white_frame_button"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_big"
        android:layout_marginHorizontal="@dimen/padding_average"
        android:gravity="center">
        <ImageView
            android:layout_width="@dimen/padding_average"
            android:layout_height="@dimen/padding_average"
            android:src="@drawable/ic_google"
            android:layout_marginEnd="@dimen/padding_small"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textSize="@dimen/registration_small_text"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/profileWhite"
        android:fontFamily="@font/open_sans"
        android:textSize="@dimen/registration_average_text"
        android:layout_margin="@dimen/padding_little"
        android:gravity="center"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_button"
        android:background="@drawable/logo_circle"
        android:text="@string/register"
        android:textColor="@color/profileWhite"
        android:textSize="@dimen/registration_small_text"
        android:layout_marginHorizontal="@dimen/padding_average"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_terms_and_conditions"
        android:textColor="@color/profileWhite"
        android:textSize="@dimen/registration_little_text"
        android:gravity="center"
        android:layout_margin="@dimen/padding_small"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/registration_little_text"
            android:layout_marginEnd="@dimen/padding_small"
            android:fontFamily="@font/open_sans" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="@dimen/registration_little_text"
            android:textColor="@color/profileWhite"
            android:fontFamily="@font/open_sans"/>
    </LinearLayout>
</LinearLayout>