<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/open_sans_semi_bold"
        android:paddingHorizontal="40dp"
        android:paddingBottom="16dp"
        android:text="@string/add_contact"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutContactUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:expandedHintEnabled="false"
        app:hintTextAppearance="@style/TextInputHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextContactUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semi_bold"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_fields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutContactCareer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/career"
        app:expandedHintEnabled="false"
        app:hintTextAppearance="@style/TextInputHint"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextContactCareer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semi_bold"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_fields" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonSaveContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/orange_frame_button"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/save"
        android:textSize="22sp" />
</androidx.appcompat.widget.LinearLayoutCompat>
